# python-bot-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  bot.py  compose.yaml  config.py  copier.yml  pyproject.toml  requirements.txt
alembic/: env.py
api/: dependencies.py  main.py
api/routes/: __init__.py  users.py
api/schemas/: __init__.py  user.py
bot/: main.py
bot/handlers/: __init__.py  base.py  start.py
common/: cache.py  redis.py
common/auth/: __init__.py  telegram.py
common/db/postgres/: base.py  uow.py
common/db/postgres/interactors/: __init__.py  user.py
common/db/postgres/models/: __init__.py  user.py
modules/: __init__.py  db_control.py
