[project]
name = "Bot Template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.12.0",
    "pytelegrambotapi>=4.29.1",
    "sqlalchemy[asyncio]>=2.0.45"
]

[dependency-groups]
dev = [
    "alembic>=1.18.1",
    "ipykernel>=7.1.0",
]
