[project]
name = "{{ project_slug }}"
version = "0.1.0"
description = "{{ project_name }}"
requires-python = ">={{ python_version }}"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pytelegrambotapi>=4.30.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.3",
    "ipykernel>=7.1.0",
]
